--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,10 @@
 {
   "semi": true,
-  "singleQuote": true,
-  "trailingComma": "all"
+  "singleQuote": true, 
+  "tabWidth": 2,
+  "useTabs": false,
+  "trailingComma": "es5", 
+  "bracketSpacing": true, 
+  "arrowParens": "avoid",
+  "printWidth": 80
 }
