--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "storybook": "^8.3.5",
     "turbo": "^2.1.3",
     "turbopack": "^0.0.1",
+    "typescript": "^5.6.3",
     "vite": "^5.4.9",
     "vitest": "^2.1.3"
   }
