--- a/packages/core-table/package.json
+++ b/packages/core-table/package.json
@@ -1,5 +1,12 @@
 {
   "name": "core-table",
   "version": "0.0.0",
-  "main": "index.js"
+  "main": "index.js",
+  "scripts": {
+    "storybook": "storybook dev -p 6006 -c stories/.storybook"
+  },
+  "devDependencies": {
+    "@storybook/html": "^8.4.2",
+    "@storybook/html-vite": "^8.4.2"
+  }
 }
