--- a/packages/core-table/package.json
+++ b/packages/core-table/package.json
@@ -1,5 +1,15 @@
 {
-  "name": "core-table",
+  "name": "@zen-table/core-table",
   "version": "0.0.0",
-  "main": "index.js"
+  "main": "dist/index.js",
+  "module": "dist/index.esm.js",
+  "types": "dist/index.d.ts",
+  "type": "module",
+  "files": [
+    "dist"
+  ],
+  "scripts": {
+    "build": "rollup -c",
+    "watch": "rollup -c --watch"
+  }
 }
