feat: #3 core-table 변경사항docs에 실시간 반영

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -108,6 +108,10 @@
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
     "skipLibCheck": true /* Skip type checking all .d.ts files. */
   },
-  "include": ["src/**/*.ts", "src/**/*.tsx"],
-  "exclude": ["node_modules"]
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "dist"],
+  "references": [
+    { "path": "./packages/core-table" },
+    { "path": "./packages/docs" }
+  ]
 }
