--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "storybook": "storybook dev -p 6006 -c packages/docs/.storybook",
     "build": "vite build",
     "lint": "eslint 'src/**/*.{ts,tsx}'",
     "format": "prettier --write 'src/**/*.{ts,tsx}'",
@@ -32,12 +31,13 @@
     "@chromatic-com/storybook": "^3.2.2",
     "@commitlint/cli": "^19.5.0",
     "@commitlint/config-conventional": "^19.5.0",
+    "@rollup/plugin-commonjs": "^28.0.2",
     "@rollup/plugin-node-resolve": "^15.3.0",
+    "@rollup/plugin-typescript": "^12.1.2",
     "@storybook/addon-essentials": "^8.4.2",
     "@storybook/addon-interactions": "^8.4.2",
     "@storybook/addon-onboarding": "^8.4.2",
     "@storybook/blocks": "^8.4.2",
-    "@storybook/html-vite": "^8.4.2",
     "@storybook/react": "^8.3.5",
     "@storybook/react-vite": "^8.4.2",
     "@storybook/test": "^8.4.2",
