build: #2 tsconfig 경로설정

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -106,12 +106,16 @@
 
     /* Completeness */
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
-    "skipLibCheck": true /* Skip type checking all .d.ts files. */
+    "skipLibCheck": true /* Skip type checking all .d.ts files. */,
+    "baseUrl": ".",
+    "paths": {
+      "@core-table/*": ["packages/core-table/src/*"],
+      "@docs/*": ["packages/docs/src/*"]
+    },
+    "moduleResolution": "node",
+    "jsx": "react-jsx"
   },
-  "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist"],
-  "references": [
-    { "path": "./packages/core-table" },
-    { "path": "./packages/docs" }
-  ]
+
+  "include": ["packages/*/src/**/*"],
+  "exclude": ["node_modules", "dist"]
 }
